--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Products/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Products/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@model IEnumerable<SaleLaptopSystem.Models.Product>
-
+﻿@model  PagedList.IPagedList<SaleLaptopSystem.Models.Product>
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
+@using PagedList;
+@using PagedList.Mvc;
 @{
     ViewBag.Title = "Products";
 }
@@ -7,14 +9,6 @@
 
 
 <h1 class="text-center btn-block btn-pink rounded-pill">@ViewBag.Brand</h1>
-
-<div class="form-inline">
-    <a href="Products?minimunPrice=10000000&maximumPrice=20000000"><button class="btn-purple rounded-pill">10tr - 20tr</button></a>
-    <a href="Products?minimunPrice=20000000&maximumPrice=30000000"><button class="btn-purple rounded-pill">20tr - 30tr</button></a>
-    <a href="Products?minimunPrice=30000000&maximumPrice=40000000"><button class="btn-purple rounded-pill">40tr - 50tr</button></a>
-    <a href="Products?minimunPrice=50000000&maximumPrice=200000000"><button class="btn-purple rounded-pill">Tren 50tr</button></a>
-
-</div>
 <div class="row row-cols-1 row-cols-md-3">
     @foreach (var p in Model)
     {
@@ -40,7 +34,16 @@
                         <div class="card-body">
                             <h4 class="card-title">@Html.DisplayName(p.Name)</h4>
                             <h5>
-                                <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Discount.ToString())đ</span>
+                                @if (p.Discount > 1)
+                                {
+                                    <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Discount.ToString()) đ</span>
+                                }
+                                else
+                                {
+                                    <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span>
+                                }
+
+
                             </h5>
                             <hr>
                             <p class="card-text purple-text">
@@ -61,3 +64,5 @@
     }
 
 </div>
+Page @(Model.Count < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort }));
