--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Search/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Search/Index.cshtml
@@ -2,11 +2,12 @@
 
 @{
     ViewBag.Title = "Search";
+    @Styles.Render("~/Content/css/index.css")
 }
 @*@using (Html.BeginForm("_Layout", "Shared", FormMethod.Get))
-{
+    {
 
-}*@
+    }*@
 @if (Model.Count() == 0)
 {
     <h3>Sản Phẩm Cần Tìm Hiện Tại Đã Hết Hàng Hoặc Không Có</h3>
@@ -38,7 +39,15 @@ else
                             <div class="card-body">
                                 <h4 class="card-title">@Html.DisplayName(p.Name)</h4>
                                 <h5>
-                                    <span class="red-text">$@Html.DisplayName(p.Discount.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Price.ToString())đ</span>
+                                    @if (p.Discount > 1)
+                                    {
+                                        <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Discount.ToString()) đ</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span>
+                                    }
+
                                 </h5>
                                 <hr>
                                 <p class="card-text purple-text">
@@ -47,8 +56,8 @@ else
                             </div>
                             <div class="text-center">
 
-                                <button type="button" class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Readmore", "Details", "ProductDetails", new { id = p.ProductDetailID }, null)</button>
-                                <button type="button" class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Add Cart", "Cart", "Orders", new { prodID = p.ID }, null)</button>
+                                <button class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Readmore", "Details", "ProductDetails", new { id = p.ProductDetailID }, null)</button>
+                                <button class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Add Cart", "Cart", "Orders", new { prodID = p.ID }, null)</button>
                             </div>
                         </div>
                         <!-- Card -->
