--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Orders/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Orders/Index.cshtml
@@ -41,7 +41,7 @@ else
                 </tr>
             }
             <tr>
-                <td align="right" colspan="4">Sum</td>
+                <td align="right" colspan="4">Total Price: </td>
                 <td>
                     @{
                         List<CartItem> carts = (List<CartItem>)Session["cart"];
