--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Index.cshtml
@@ -4,9 +4,24 @@
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Home";
-    
+
 }
 @Styles.Render("~/Content/css/index.css")
+@section scripts{
+    <script>
+        $(function () {
+            $('#AlertBox').removeClass('hide');
+            $('#AlertBox').delay(2000).slideUp(500);
+        });
+
+    </script>
+}
+@if (TempData["AlertMessage"] != null)
+{
+    <div id="AlertBox" class="alert alert-success hide" role="alert">
+        @TempData["AlertMessage"]
+    </div>
+}
 <h1 class="text-center btn-block btn-pink rounded-pill">Giá sốc cuối tuần</h1>
 <div class="row row-cols-1 row-cols-md-3">
     @foreach (var p in Model)
@@ -51,7 +66,7 @@
                         <div class="text-center">
 
                             <button type="button" class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Readmore", "Details", "ProductDetails", new { id = p.ProductDetailID }, null)</button>
-                            <button  class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Add Cart", "Cart", "Orders", new { prodID = p.ID }, null)</button>
+                            <button class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Add Cart", "Cart", "Orders", new { prodID = p.ID }, null)</button>
                         </div>
                     </div>
                     <!-- Card -->
@@ -65,7 +80,7 @@
 </div>
 Page @(ViewBag.Home.Count < ViewBag.Home.PageNumber ? 0 : ViewBag.Home.PageNumber) of @ViewBag.Home.PageCount
 
-@Html.PagedListPager(Model, page => Url.Action("Index", new { page , sortOrder = ViewBag.CurrentSort }));
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort }));
 
 
 
