--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Index.cshtml
@@ -26,55 +26,63 @@
 <div class="row row-cols-1 row-cols-md-3">
     @foreach (var p in Model)
     {
-        foreach (var imange in p.Images)
-        {
-            if (p.ID == imange.ProductID)
-            {
-                <div class="col mb-4">
-                    <!-- Card -->
-                    <div class="card card-product">
-                        <!--Card image-->
-                        <div class="view overlay">
+        
 
-                            <a href="/ProductDetails/Details/@p.ProductDetailID">
-                                <img class="card-img-top"
-                                     src="@imange.image"
-                                     alt="Card image cap">
-                                <div class="mask rgba-white-slight"></div>
+            <div class="col mb-4">
+                <!-- Card -->
+                <div class="card card-product">
+                    <!--Card image-->
+                    <div class="view overlay">
 
-                            </a>
-                        </div>
-                        <!--Card content-->
-                        <div class="card-body">
-                            <h4 class="card-title">@p.Name</h4>
-                            <h5>
-                                @if (p.Discount > 1)
+                        <div class="carousel slide" data-ride="carousel" data-interval="1000" style="width:350px; height: 400px;">
+                            <div class="carousel-inner">
+                                @foreach (var imange in p.Images)
                                 {
-                                    <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Discount.ToString()) đ</span>
-                                }
-                                else
-                                {
-                                    <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span>
-                                }
-
-                            </h5>
-                            <hr>
-                            <p class="card-text purple-text">
-                                @p.Features
-                            </p>
+                                    if (p.ID == imange.ProductID)
+                                    {
+                                        <a href="/ProductDetails/Details/@p.ProductDetailID">
+                                            <div class="carousel-item @(imange == p.Images.First() ? "active" : "")">
+                                                <img class="card-img-top" src="@imange.image">
+                                                @*style=" padding-left: 40px; padding-top: 40px; width: 330px;*@
+                                            </div>
+                                            </a>
+                                            }
+                                        }
+                                    </div>
                         </div>
-                        <div class="text-center">
 
-                            <button type="button" class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Readmore", "Details", "ProductDetails", new { id = p.ProductDetailID }, null)</button>
-                            <button class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Add Cart", "Cart", "Orders", new { prodID = p.ID }, null)</button>
-                        </div>
+
+                    
                     </div>
-                    <!-- Card -->
+                    <!--Card content-->
+                    <div class="card-body">
+                        <h4 class="card-title">@p.Name</h4>
+                        <h5>
+                            @if (p.Discount > 1)
+                            {
+                                <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Discount.ToString()) đ</span>
+                            }
+                            else
+                            {
+                                <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span>
+                            }
+
+                        </h5>
+                        <hr>
+                        <p class="card-text purple-text">
+                            @p.Features
+                        </p>
+                    </div>
+                    <div class="text-center">
+
+                        <button type="button" class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Readmore", "Details", "ProductDetails", new { id = p.ProductDetailID }, null)</button>
+                        <button class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Add Cart", "Cart", "Orders", new { prodID = p.ID }, null)</button>
+                    </div>
                 </div>
+                <!-- Card -->
+            </div>
 
-            }
-
-        }
+  
     }
 
 </div>
